# roboy_control

./: .gitignore  .gitmodules
build-src-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  roboy_control.cbp
build-src-Desktop-Default/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
build-src-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-src-Desktop-Default/roboy_control/: CTestTestfile.cmake  Makefile  cmake_install.cmake  qrc_PlayerResources.cxx  ui_EditorView.h  ui_MainWindow.h  ui_PlayerView.h  ui_RecorderView.h
build-src-Desktop-Default/roboy_control/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  roboy_control-msg-extras.cmake.develspace.in  roboy_control-msg-extras.cmake.installspace.in
build-src-Desktop-Default/roboy_control/cmake/: roboy_control-genmsg-context.py  roboy_control-genmsg.cmake
build-src-Desktop-Default/roboy_control/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  (+2 more)
src/: CMakeLists.txt  CMakeLists.txt~
src/roboy_control/: CMakeLists.txt  msg  package.xml
src/roboy_control/database/: 123Test.xml  16_motors.xml  1_motor.xml  DefaultBehavior.xml  Force_Test1.xml  GreetBehavior.xml  Position_Test1.xml  Position_Test2.xml  Record1.xml  TestBehavior1.xml  TestBehavior2.xml  TestRecording.xml  newest.xml
src/roboy_control/documentation/: Communication_ClassDiagram.xml  Flattening.graffle  House of Quality.xls  Protocol Sequence.xml  RoboyControl ComponentDiagram.xml  SoftwareArchitecture.xml  SystemArchitecture.xml  SystemOverview.tiff  Xml-FileStructure.xml
src/roboy_control/etc/: ControllerStub.launch  RoboyControlConfig.xml  RoboyControlConfig.xml_16motors  StartNode.sh
src/roboy_control/msg/: CancelBehavior.msg  ControllerState.msg  ExecuteBehavior.msg  InitializeRequest.msg  InitializeResponse.msg  MotorMessage.msg  StartRecording.msg  StopRecording.msg  Trajectory.msg  Waypoint.msg
src/roboy_control/src/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  GUIColors.h  LogDefines.h  Main.cpp  RoboyControl.cpp
src/roboy_control/src/communication/: CMakeLists.txt  IControllerCommunication.h  IControllerHandle.h  IMasterCommunication.h  ROSControllerCommunication.cpp  ROSControllerCommunication.h  ROSControllerHandle.cpp  ROSControllerHandle.h  ROSMasterCommunication.cpp  ROSMasterCommunication.h
src/roboy_control/src/controller/: CMakeLists.txt  DataPool.cpp  DataPool.h  MyoController.cpp  MyoController.h  RoboyControlConfiguration.cpp  RoboyControlConfiguration.h  RoboyController.cpp  RoboyController.h
src/roboy_control/src/interfaces/: CMakeLists.txt  IObservable.h  IObserver.h
src/roboy_control/src/model/: CMakeLists.txt  DataPool.cpp  DataPool.h  IModelService.h  RoboyBehaviorXmlParser.cpp  RoboyBehaviorXmlParser.h  XmlModelService.cpp  XmlModelService.h
src/roboy_control/src/myo/: CMakeLists.txt  IMotorController.h  IMyoMaster.h  ROSMotorController.cpp  ROSMotorController.h  ROSMyoMaster.cpp  ROSMyoMaster.h
src/roboy_control/src/testnode/: ControllerStub.cpp  TestNode.cpp
src/roboy_control/src/transceiver/: CMakeLists.txt  ITransceiverService.h  ITransceiverServiceDelegate.h  MyoController.cpp  MyoController.h  ROSMessageTransceiverService.cpp  ROSMessageTransceiverService.h
src/roboy_control/src/types/: CMakeLists.txt
src/roboy_control/src/view/: AddRoboyBehaviorDialog.cpp  AddRoboyBehaviorDialog.h  AddRoboyBehaviorDialog.ui  CMakeLists.txt  EditorView.cpp  EditorView.h  EditorView.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerView.cpp  PlayerView.h  PlayerView.ui  RecorderView.h  RecorderView.ui  RoboyBehaviorModel.cpp  RoboyBehaviorModel.h  ViewController.cpp  ViewController.h  qml.qrc
src/roboy_control/src/view/EditorView/: EditorView.cpp  EditorView.h
src/roboy_control/src/view/MainWindow/: MainWindow.cpp  MainWindow.h
src/roboy_control/src/view/PlayerView/: BehaviorListModel.cpp  BehaviorListModel.h  BehaviorQueueModel.cpp  BehaviorQueueModel.h  PlayerResources.qrc  PlayerView.cpp  PlayerView.h  PlayerView.ui
src/roboy_control/src/view/PlayerView/Dialogs/: AddRoboyBehaviorDialog.cpp  AddRoboyBehaviorDialog.h  AddRoboyBehaviorDialog.ui
src/roboy_control/src/view/PlayerView/MultiLaneView/: IMultiLaneViewModel.h  MultiLaneView.cpp  MultiLaneView.cpp.autosave  MultiLaneView.h  MultiLaneViewItem.cpp  MultiLaneViewItem.h  MultiLaneViewLane.cpp  MultiLaneViewLane.h  RoboyMultiLaneModel.cpp  RoboyMultiLaneModel.h
src/roboy_control/src/view/RecorderView/: RecorderView.cpp  RecorderView.h
src/roboy_control/src/view/mainWindow/: BehaviorListModel.cpp  MainWindow.cpp  MainWindow.h  MainWindow.qml
src/roboy_control/src/view/mainWindow/debugView/: DebugView.cpp  DebugView.h  DebugView.qml  MotorStateListModel.cpp  MotorStateListModel.h
src/roboy_control/src/view/mainWindow/editorView/: EditorView.cpp  EditorView.h  EditorView.qml
src/roboy_control/src/view/mainWindow/playerView/: BehaviorListModel.cpp  BehaviorListModel.h  PlayerView.cpp  PlayerView.h  PlayerView.qml  RoboyMultiLaneModel.cpp  RoboyMultiLaneModel.h
src/roboy_control/src/view/mainWindow/playerView/dialogs/: AddBehaviorDialog.qml
src/roboy_control/src/view/mainWindow/playerView/multiLaneView/: IMultiLaneViewModel.h  MultiLaneView.qml  MultiLaneViewItem.qml  MultiLaneViewLane.qml
src/roboy_control/src/view/mainWindow/recorderView/: RecorderView.cpp  RecorderView.h  RecorderView.qml
src/roboy_control/src/view/mainWindow/roboyView/: ControllerStateListModel.cpp  ControllerStateListModel.h  RoboyView.cpp  RoboyView.h  RoboyView.qml
src/roboy_control/src/view/mainWindow/settingsView/: SettingsView.qml
src/roboy_control/src/view/mainWindow/settingsView/settingsItems/: GeneralSettings.qml  ThemeSettings.qml  ThirdPartySettings.qml
src/roboy_control_test/: CMakeLists.txt  package.xml
src/roboy_control_test/etc/: ControllerStub.launch  StartNode.sh
src/roboy_control_test/src/: ControllerStub.cpp  DataTypes.h  Main.cpp  TestNode.cpp  TestNode.h
(+52 files in other folders)
